# src/services/impl/read/UserDtoService.js
@@ -4,15 +4,13 @@ import UserSchema from './../../../schemas/UserSchema';
 import TeamService from '../write/TeamService';
 
 
-const teamService = new TeamService()
-
 class UserDtoService extends BaseService {
 
   constructor(options = { scoped: true }) {
     super(UserSchema, options);
   }
 
-  async mapUsers(users) {
+  async mapDTOs(users) {
     return users.map((user) => {
       const roles = user.roles.map(r => ({
         role: r.role,
@@ -42,7 +40,7 @@ class UserDtoService extends BaseService {
     }
     const user = await this.findOne(query);
     if (!user) return null;
-    const [result] = await this.mapUsers([user]);
+    const [result] = await this.mapDTOs([user]);
     return result;
   }
 
@@ -54,64 +52,18 @@ class UserDtoService extends BaseService {
     }
     const user = await this.findOne(query);
     if (!user) return null;
-    const [result] = await this.mapUsers([user]);
+    const [result] = await this.mapDTOs([user]);
     return result;
   }
 
 
-  async getUsers(usernames) {
-    const users = await this.findMany({ _id: { $in: [...usernames] }, status: USER_PROFILE_STATUS.APPROVED });
-    if (!users.length) return [];
-    const result = await this.mapUsers(users);
-    return result;
+  async getUsersPaginated(filter, sort, pagination) {
+    const f = filter || {};
+    const { paginationMeta, result: nftItems } = await this.findManyPaginated(f, sort, pagination);
+    const result = await this.mapDTOs(nftItems);
+    return { paginationMeta, result };
   }
 
-
-  // TODO: Remove this
-  async findUserProfileByOwner(_id) {
-    const user = await this.findOne({ _id: _id });
-    return user;
-  }
-
-
-  async findUserProfilesByStatus(status) {
-    const users = await this.findMany({ status: status })
-    return users;
-  }
-
-
-  async findUserProfiles(accounts) {
-    const users = await this.findMany({ '_id': { $in: accounts } });
-    return users;
-  }
-
-
-  async getUsersByTeam(teamId) {
-    const team = await teamService.getTeam(teamId);
-    if (!team) return [];
-    const { members } = team;
-    const users = await this.findMany({ _id: { $in: [...members] }, status: USER_PROFILE_STATUS.APPROVED });
-    if (!users.length) return [];
-    const result = await this.mapUsers(users);
-    return result;
-  }
-
-
-  async getUsersByPortal(portalId) {
-    const available = await this.findMany({ status: USER_PROFILE_STATUS.APPROVED });
-    const users = available.filter(p => p.portalId == portalId);
-    if (!users.length) return [];
-    const result = await this.mapUsers(users);
-    return result;
-  }
-
-
-  async getUsersListing(status) {
-    const users = await this.findMany({ status: status ? status : USER_PROFILE_STATUS.APPROVED });
-    if (!users.length) return [];
-    const result = await this.mapUsers(users);
-    return result;
-  }
 }
 
 export default UserDtoService;
